[tool.poetry]
name = "workforce-async"
version = "0.9.1"
description = "Asyncio Wrapper"
authors = ["Caswall Engelsman <mail@cengelsman.com>"]

[tool.poetry.dependencies]
python = "^3.6"
parse = "^1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
